# geoparquet-pydantic

./: .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  pypi_README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: tests.yml
.github/workflows/: pre-commit.yml  publish_package.yml  tests.yml
geoparquet_pydantic/: __init__.py  convert.py  properties.py  schemas.py  to_arrow.py  validate.py
geoparquet_pydantic/cli/: __init__.py  convert.py  validate.py
src/geoparquet_pydantic/: schemas.py  validate.py
tests/: conftest.py  test_conversions.py  test_geometry.py  test_schemas.py  test_validation.py
tests/test_data/: valid.geojson  valid_geojson.parquet
